; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/misc/extr_appendvfs.c_apndDlError.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/misc/extr_appendvfs.c_apndDlError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (%struct.TYPE_3__*, i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*)* @apndDlError to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apndDlError(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call %struct.TYPE_3__* @ORIGVFS(i32* %7)
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32 (%struct.TYPE_3__*, i32, i8*)*, i32 (%struct.TYPE_3__*, i32, i8*)** %9, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call %struct.TYPE_3__* @ORIGVFS(i32* %11)
  %13 = load i32, i32* %5, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 %10(%struct.TYPE_3__* %12, i32 %13, i8* %14)
  ret void
}

declare dso_local %struct.TYPE_3__* @ORIGVFS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
